...
  String get askUser => '询问用户';

  @override
  String get askUserDescription => '对每个冲突询问用户';

  @override
  String get author => '作者';

  @override
  String get autoBackup => '自动备份';

  @override
  String get autoBackupDescription => '定期自动备份您的数据';
...
  String get configManagementDescription => '管理书法风格和书写工具配置';

  @override
  String get configManagementTitle => '书法风格管理';

  @override
  String get confirm => '确定';

  @override
  String get confirmChangeDataPath => '确认更改数据路径';

  @override
  String get confirmContinue => '确定要继续吗？';
...

  @override
  String days(num count) {
    String _temp0 = intl.Intl.pluralLogic(
      count,
      locale: localeName,
      other: '$count天',
      one: '1天',
    );
    return '$_temp0';
  }

  @override
...
  String get images => '图片';

  @override
  String get implementationComingSoon => '此功能正在开发中，敬请期待！';

  @override
  String get import => '导入';

  @override
  String get importBackup => '导入备份';

  @override
  String get importBackupFailed => '导入备份失败';
...
  String get initializationErrorDetails => '错误详情:';

  @override
  String get initializationErrorMessage => '请重新启动应用，如果问题持续存在，请联系支持团队';

  @override
  String get retry => '重试';

  @override
  String get connectingDatabase => '正在连接数据库...';

  @override
  String get loadingUserSettings => '正在加载用户设置...';
...
  }

  @override
  String get reload => '重新加载';

  @override
  String get remarks => '备注';

  @override
  String get remarksHint => '添加备注信息';

  @override
  String get remove => '移除';
...
